# anabasis-assistent

./: README.md  pyproject.toml
baml_src/: clients.baml  planner_entrypoint.baml
baml_src/tools/: character_sheet_ingestion.baml  spell_ingestion.baml
docs/: tasks.md
notebooks/data/: character_sheet.ipynb
sql/: 0005_character_sheet.sql  0006_eras.sql  0009_locations.sql  0010_location_aliases.sql  0011_location_relationships.sql  0014_organization_relationships.sql  0016_characters.sql  0017_character_aliases.sql  0022_artifacts.sql  0023_artifact_aliases.sql  0025_artifact_character_holders.sql  0027_agreements.sql  0028_agreement_characters.sql  0029_agreement_organizations.sql  0031_event_characters.sql  0033_event_locations.sql  0034_event_artifacts.sql  0035_tools.sql  0036_llm_functions.sql
src/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
src/db/: psycopg_adapter.py
src/discord_adapter/: discord_auth.py  discord_main.py  discord_router.py  discord_types.py  response_utils.py
src/discord_adapter/discord_boundary/: config.py  discord_boundary_utils.py
src/etl/character_sheet/: config.py  field_catalog.py
src/etl/character_sheet/parsing/: parse_spells.py
src/tools/: config.py
src/tools/rolling/: discord_slash_roll.py  rolling.py
tests/test_db/: test_psycopg_adapter.py
tests/test_etl/: test_field_catalog.py
tests/test_tooling/: test_discord_slash_roll.py  test_rolling.py
